[package]
name = "rate-rs"
version = "0.1.0"
authors = ["rg <daimaldd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
smol = "1.2.5"
async-io = "1.3.1"
tokio = { version = "1", features = ["full"] }
