[package]
name = "rate-rs"
version = "0.1.0"
authors = ["rg <daimaldd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1", features = ["full"] }
pprof = { version = "0.4.0", features = ["flamegraph"] }

[dev-dependencies]
criterion = "0.3"
plotlib = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false